pagine per nuovo grafico

--- a/awshitbruh.html
+++ b/awshitbruh.html
@@ -1,4 +1,5 @@
-<html><head>
+<html>
+<head>
   <title>math.js | plot</title>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.13.1/math.min.js"></script>
 
