--- a/eqCiarro.html
+++ b/eqCiarro.html
@@ -83,7 +83,7 @@
 </body>
 <script type="text/javascript" src="jQ_320.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script type="text/javascript" src="math-dev.js"></script>
+<script type="text/javascript" src="math.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script>
   class Cursor{
